# AI_Agent_Job_Application

./: .env.example  .gitignore  Design.md  E2E_Pipeline_Test_Data.json  E2E_Pipeline_Test_Report.md  E2E_Single_Full-stack_Developer_Data.json  E2E_Single_Full-stack_Developer_Report.md  README.md  User_information_prompts.txt  checklist.md  docker-compose.yml  install.bat  run.bat
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: exceptions.py  rate_limit.py  websocket.py
backend/app/db/: session.py
backend/app/mcp/: __init__.py  __main__.py  server.py
backend/app/models/: __init__.py  agent_log.py  application.py  base.py  cover_letter.py  job.py  match.py  user.py
backend/app/routers/: agent.py  config.py  jobs.py  matches.py  reports.py
backend/app/schemas/: api.py  matching.py  profile.py
backend/app/services/: llm_factory.py
backend/app/services/agent/: __init__.py  (+4 more)
backend/app/worker/: settings.py  tasks.py
backend/data/: user_config.yaml
backend/scripts/: real_user_test.py  run_matching.py
backend/tests/: conftest.py  e2e_pipeline_test.py
backend/tests/fixtures/: mock_responses.py  sample_jobs.json  sample_resume.txt
backend/tests/test_agent/: conftest.py  test_ats_greenhouse.py  test_field_mapper.py  test_graph.py  test_interrupt.py  test_nodes.py  test_state.py
backend/tests/test_api/: conftest.py  test_agent_router.py  test_config_router.py  test_jobs_router.py  test_matches_router.py  test_websocket.py
backend/tests/test_config/: test_config.py
backend/tests/test_db/: conftest.py  test_models.py
backend/tests/test_docker/: test_compose.py
backend/tests/test_integration/: test_api_e2e.py  test_matching_e2e.py  test_scraping_e2e.py  test_user_workflow.py
backend/tests/test_matching/: conftest.py  test_ats_scorer.py  test_embedder.py  test_llm_factory.py  test_multi_query.py  test_pipeline.py  test_pre_filter.py  test_retriever.py  test_scorer.py
backend/tests/test_mcp/: conftest.py  test_prompts.py  test_resources.py  test_tools.py
backend/tests/test_profile/: test_linkedin_parser.py
backend/tests/test_reports/: conftest.py  test_cover_letter.py  test_evaluation.py  test_generator.py  test_templates.py
(+93 files in other folders)
